removed target folder and did formatting